--- a/src/sass/sections/_mainscreen.scss
+++ b/src/sass/sections/_mainscreen.scss
@@ -230,6 +230,10 @@
                     &_loaded {
                         background: rgb(43, 179, 9);
                         color: rgb(255, 255, 255);
+                        &:after,
+                        &:before {
+                            filter: brightness(2);
+                        }
                     }
                     &:before {
                         position: absolute;
