--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -4,4 +4,4 @@
 @import 'base/animations';
 @import 'sections/mainscreen';
 @import 'sections/feedback';
-@import 'base/media'
+@import 'base/media';
